--- a/src/App.css
+++ b/src/App.css
@@ -1,7 +1,3 @@
-.App {
-  text-align: center;
-}
-
 .App-logo {
   height: 40vmin;
   pointer-events: none;
@@ -35,4 +31,80 @@
   to {
     transform: rotate(360deg);
   }
+}
+
+.app {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
+.card-container {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  align-items: center;
+  width: 80%;
+}
+
+.card {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  background-color: darkslategrey;
+  border-radius: 5px;
+  margin: 10px;
+  width: 150px;
+  height: 100px;
+  text-align: center;
+}
+
+.card > a {
+  color: white;
+  text-decoration: none;
+  width: 100%;
+  justify-self: center;
+}
+
+.detail-container {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
+.info-container {
+  display: flex;
+  flex-direction: column;
+  background-color: darkslategrey;
+  color: white;
+  border-radius: 15px;
+  width: fit-content;
+  height: fit-content;
+  padding: 12px;
+  box-shadow: 4px 6px lightgrey;
+}
+
+.info-container > a {
+  text-decoration: none;
+  color: white;
+  background-color: cadetblue;
+  width: fit-content;
+  border-radius: 15px;
+  padding: 9px;
+}
+
+.info-container > a:hover {
+  color: orange;
+  box-shadow: 2px 3px grey;
+}
+
+h2 {
+  display: inline-flex;
+}
+
+h2 > p {
+  margin: 0px 10px;
+  text-shadow: 2px black;
 }
